fixed sidebar rendering issue on safari

--- a/styles/app/tasker_app.module.scss
+++ b/styles/app/tasker_app.module.scss
@@ -82,6 +82,10 @@
 
 }
 
+.sideNavWrapper {
+    display: none;
+}
+
 @media screen and (min-width: 769px){
     .container {
 
@@ -104,6 +108,10 @@
             }
         }
 
+        .sideNavWrapper {
+            display: block;
+        }
+        
     }
 
     .darkMode {
